tests/lean/mutualWithNamespaceMacro.lean.expected.out
mutualWithNamespaceMacro.lean:9:0: error: conflicting namespaces in mutual declaration, using namespace 'Boo', but used 'Foo' in previous declaration
